# SAE921-GPR5100-Network

./: CMakeLists.txt  Minitel.pptx  README.md  vcpkg.json
CatFight/: CMakeLists.txt  CMakeSettings.json
CatFight/core/include/engine/: component.h  globals.h  transform.h
CatFight/core/include/maths/: vec2.h
CatFight/core/src/engine/: engine.cpp  entity.cpp
CatFight/core/src/graphics/: sprite.cpp
CatFight/core/src/maths/: vec2.cpp
CatFight/core/test/: test_component.cpp
CatFight/game/include/game/: animation_manager.h  bullet_manager.h  game_globals.h  game_manager.h  physics_manager.h  player_character.h  rollback_manager.h  sound_manager.h
CatFight/game/include/network/: debug_db.h  packet_type.h  (+5 more)
HandPaperScisorStump/: CMakeLists.txt  CMakeSettings.json  README.md
HandPaperScisorStump/common/include/: Packet.h  PlayerAction.h  Result.h
HandPaperScisorStump/common/src/: Packet.cpp
HandPaperScisorStump/echo_client/: CMakeLists.txt
HandPaperScisorStump/echo_client/src/: main.cpp
HandPaperScisorStump/game_client/src/: Client.cpp  main.cpp
HandPaperScisorStump/game_server/include/: Server.h  ServerState.h
HandPaperScisorStump/game_server/src/: Server.cpp
common/include/: Packet.h  PlayerAction.h
common/src/: Packet.cpp
echo_client/: CMakeLists.txt
echo_client/src/: main.cpp
echo_server/: CMakeLists.txt
echo_server/src/: main.cpp
game_client/: CMakeLists.txt
game_client/include/: Client.h  ClientState.h
game_client/src/: Client.cpp  main.cpp
game_server/include/: Server.h  ServerState.h
game_server/src/: Server.cpp  main.cpp
(+17 files in other folders)
